# hyper-rectangular-clustering

./: .gitignore  CMakeLists.txt  README.md
src/: BUILD  CMakeLists.txt  branching_handler.cc  branching_handler.h  pricer_scip.cc  pricer_scip.h  problem_data.cc  problem_data.h  problem_main.cc  problem_model.cc  problem_model.h  problem_model_test.cc  same_or_diff_constraint_handler.cc  same_or_diff_constraint_handler.h
src/pricer/: BUILD  CMakeLists.txt  pricer.cc  pricer.h  pricer_test.cc
src/pricer/pricer_cpsat/: BUILD  CMakeLists.txt  pricer_cpsat.cc  pricer_cpsat.h
src/pricer/pricer_maxclosure/: BUILD  CMakeLists.txt  pricer_maxclosure.cc  pricer_maxclosure.h
src/pricer/pricer_mip/: BUILD  CMakeLists.txt  pricer_mip.cc  pricer_mip.h
